# Genai_2026

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  Jungle_README.md  README-mac.md  README.md  docker-compose.yml  jungle-agentic.cmd  package-lock.json  package.json  progress.md  tmp_codex_bridge_test.html
Testing/: AGENTS.md  index.html  name.html  three-line.html  william.html
db/: agentic.json  preview_test.html  runs.json  sandbox_backend.json  test_catalog.json
langflow_orchestrator/: AGENTIC_LANGFLOW_IMPLEMENTATION.md  LANGFLOW_IMPORT_AND_TEST.md  README.md  agentic_flow_blueprint.yaml  flow_blueprint.yaml  jungle_orchestrator.langflow.json  pyproject.toml  validate_langflow_flow.py
langflow_orchestrator/examples/: sample_payload.json
langflow_orchestrator/pipeline/: __init__.py  agentic_cli.py  agentic_contracts.py  agentic_demo.py  agentic_orchestrator.py  agentic_tools.py  contracts.py  demo.py  env_bootstrap.py  gemini_critic_agent.py  openai_environment_agent.py  openai_execution_agent.py  orchestrator.py  runtime_paths.py  stages.py
langflow_orchestrator/references/: starter_projects_index.json
src/: main.js  preload.js
tests/: agentic_approval_gating.test.js  agentic_environment_codegen.test.js  agentic_examples.test.js  agentic_loop.test.js  agentic_orchestration_semantics.test.js  catalog_service.test.js  cli_agentic_loop_feedback.test.js  cli_tool_contract.test.js  environment_planner.test.js  jungle_agentic_cli.test.js  jungle_tool_bridge.test.js  jungle_tool_closed_loop.test.js  manager.test.js  operational_example.test.js  (+8 more)
(+520 files in other folders)
