[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jungle-langflow-orchestrator"
version = "0.1.0"
description = "Python sidecar for Jungle agentic orchestration."
requires-python = ">=3.11"

[project.scripts]
jungle-langflow-agentic = "langflow_orchestrator.pipeline.agentic_cli:main"

[tool.setuptools]
include-package-data = true
packages = ["langflow_orchestrator", "langflow_orchestrator.pipeline"]

[tool.setuptools.package-dir]
langflow_orchestrator = "."
